<resources>
    <!-- Menu -->
    <string name="courses">Cours</string>
    <string name="panneaux">Panneaux</string>
    <string name="exam">Examen</string>
    <string name="settings">Réglages</string>

    <string name="cours_details">Cours détails</string>
    <string name="exam_quizz">Quizz</string>

    <string name="app_name">Permis de conduire</string>
    <string name="developper">Charmidez Assiobo</string>
    <string name="dark_mode">Mode Sombre</string>
    <string name="active_dark_mode">Appuyez pour activer le mode sombre</string>
    <string name="change_language">Changez de langue</string>
    <string name="change_language_english">Switch to english</string>
    <string name="apropos">A Propos</string>
    <string name="qui_sommes_nous">Qui sommes-nous</string>

    <string name="choose_right_answer">Choisissez La bonne réponse</string>

    <string name="qui_sommes_nous_texte">
        Je possède plusieurs années d’expérience dans le developpement informatique, notamment dans le developpement mobile et web. En effet, j’ai acquis une bonne expérience à l’entrée de données et je possède une aisance remarquable avec les dernières versions des technologies android et node. Je suis une personne polyvalente avec une grande capacité d’adaptation. Capable de travailler sous pression et de respecter des délais serrés, je suis convaincu que je pourrais m’adapter rapidement à votre environnement de travail, dans la mésure où nous devrons signer un contrat de travail. Conscient de la diversité de votre clientèle, je vous fais savoir que je maîtrise d\'autres aspect du developpement informatique , ce qui me rend capable de developper des solutions informatiques pointues.
    </string>

    <string name="code_conseil_du_jour">Attachez toujours votre ceinture de sécurité</string>

    <string name="app_courses_item">Introduction aux panneau danger</string>

    <string name="score_quizz">Score  Quizz</string>
    <string name="nom_profil">Kokou Agbedokponou</string>
    <string name="progression">Progression</string>
    <string name="score_total">Score </string>

    <string name="loading">Chargement...</string>

    <string name="metamask_pneumonic_world">pledge bounce trip resemble west magnet salute plate memory cave skill once</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>


    <!-- Quizz of -->
    <string name="question">Quelles sont les différentes signalisations Routières</string>
    <string name="option1">La signalisation Verticale, Horizontale, Lumineuses et les signes des Agents</string>
    <string name="option2">Les intersections en X, en Y, et en T</string>
    <string name="option3">Les lignes continues les lignes discontinues et les lignes mixtes.</string>
    <string name="option4">Option 4</string>

    <string name="gridview_textview">Liste des quizz par étapes</string>

</resources>