<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--item
        android:id="@+id/item_course"
        android:icon="@drawable/ic_courses"
        android:title="@string/courses" />
    <item
        android:id="@+id/item_panneau"
        android:icon="@drawable/ic_panneau_signalisation"
        android:title="@string/panneaux"/>
    <item
        android:id="@+id/item_exam"
        android:icon="@drawable/ic_examen"
        android:title="@string/exam"/>
    <item
        android:id="@+id/item_setting"
        android:icon="@drawable/ic_setting_light"
        android:title="@string/settings"/-->

    <item
        android:id="@+id/navigation_course_fragment"
        android:icon="@drawable/ic_courses"
        android:title="@string/courses" />
    <item
        android:id="@+id/navigation_panneaux_fragment"
        android:icon="@drawable/ic_panneau_signalisation"
        android:title="@string/panneaux"/>
    <item
        android:id="@+id/navigation_examen_fragment"
        android:icon="@drawable/ic_examen"
        android:title="@string/exam"/>
    <item
        android:id="@+id/navigation_setting_fragment"
        android:icon="@drawable/ic_setting_light"
        android:title="@string/settings"/>


</menu>