<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".fragments.SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView_darkmode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/change_language"
        android:textColor="@color/bluedark_gunmetal"
        android:textSize="@dimen/bold_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <Switch
        android:id="@+id/switch_language"
        style="@style/switch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:thumbTint="@color/yellow_yellowochre"
        app:layout_constraintStart_toStartOf="@+id/switch_darkmode"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language_english"
        app:layout_constraintBottom_toBottomOf="@+id/switch_language"
        app:layout_constraintEnd_toEndOf="@+id/textView_darkmode2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_darkmode2"
        app:layout_constraintTop_toBottomOf="@+id/textView_darkmode2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_darkmode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_size_in_activity"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/dark_mode"
        android:textColor="@color/bluedark_gunmetal"
        android:textSize="@dimen/bold_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/switch_darkmode"
        style="@style/switch_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_size_in_activity"
        android:layout_marginEnd="@dimen/padding_size_in_activity"
        android:buttonTint="@color/yellow_yellowochre"
        android:thumbTint="@color/red_fireopal"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_dark_mode"
        app:layout_constraintEnd_toEndOf="@+id/textView_darkmode"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_darkmode"
        app:layout_constraintTop_toBottomOf="@+id/textView_darkmode" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <View
        android:id="@+id/divider2"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView_nous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/apropos"
        android:textColor="@color/bluedark_gunmetal"
        android:textSize="@dimen/bold_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qui_sommes_nous"
        app:layout_constraintEnd_toEndOf="@+id/textView_nous"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_nous"
        app:layout_constraintTop_toBottomOf="@+id/textView_nous" />


</androidx.constraintlayout.widget.ConstraintLayout>