<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="false"
    android:background="@drawable/background_gradiant"
    android:padding="@dimen/padd"
    tools:context=".fragments.ExamenFragment">
    <TextView
        android:id="@+id/textView_title_fragment_exam_quizz"
        style="@style/titleFragment"
        android:textColor="@color/bluesecond_cobaltturquoise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_rounded_white"
        android:gravity="center"
        android:padding="@dimen/padd"
        android:text="@string/exam_quizz"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_title_fragment_exam_quizz">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_question"
                android:src="@drawable/ic_splash_screen"
                android:background="@drawable/background_rounded_white"
                android:layout_width="match_parent"
                android:layout_height="256dp"/>

            <LinearLayout
                android:id="@+id/linearLayout_progressBar"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/margin"
                android:gravity="center">
                <ProgressBar
                    android:id="@+id/progressBar_level_quizz"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:theme="@style/progress_bar"
                    android:minHeight="50dp"
                    android:max="20"
                    android:progress="2"
                    android:indeterminateTintMode="src_atop"
                    android:indeterminateTint="@color/bluesecond_cobaltturquoise"/>
                <TextView
                    android:id="@+id/textView_progressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="2/20"
                    style="@style/textTitleProgress"
                    android:indeterminate="true"
                    android:paddingLeft="8dp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/textQuestion"
                android:text="@string/question"/>

            <!-- Option One -->
            <LinearLayout
                android:id="@+id/cardView_optionOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_white"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/letter_1"/>
                <TextView
                    android:id="@+id/textView_optionOne"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/textMidTitle"
                    android:text="@string/option1" />
            </LinearLayout>

            <!-- Option two -->
            <LinearLayout
                android:id="@+id/cardView_optionTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_white"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/letter_4"/>
                <TextView
                    android:id="@+id/textView_optionTwo"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/textMidTitle"
                    android:text="@string/option2" />
            </LinearLayout>

            <!-- Option Three -->
            <LinearLayout
                android:id="@+id/cardView_optionThree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_white"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/letter_2"/>
                <TextView
                    android:id="@+id/textView_optionThree"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/textMidTitle"
                    android:text="@string/option2" />
            </LinearLayout>

            <!-- Option Four -->
            <LinearLayout
                android:id="@+id/cardView_optionFour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rounded_white"
                android:layout_marginTop="@dimen/margin"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_margin="4dp"
                    android:src="@drawable/letter_3"/>
                <TextView
                    android:id="@+id/textView_optionFour"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    style="@style/textMidTitle"
                    android:text="@string/option1" />
            </LinearLayout>

            <!-- Button -->
            <Button
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Soumettre"
                android:elevation="8dp"
                android:textColor="@color/white_alabaster"
                android:fontFamily="@font/source_sans_pro_bold"
                android:textAllCaps="false"
                android:textSize="@dimen/bold_text_size"
                android:background="@drawable/rounded_buttonview" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>